--- a/index.html
+++ b/index.html
@@ -5,12 +5,62 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Наша первая страница</title>
-	<link rel="stylesheet" href="main.css">
-	<script src="script.js"></script>
+	<link
+		href="https://fonts.googleapis.com/css?family=Fredoka+One|PT+Serif:400,400i|Quicksand:700|Raleway&display=swap"
+		rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<link rel="stylesheet" href="style/all.min.css">
+	<link rel="stylesheet" href="style/fontawesome.min.css">
+	<link rel="stylesheet" href="style/main.css">
+	<script src="script.js"></script>
 </head>
 
-<body>
+<body class="homepage">
+
+	<!--Шапка сайта-->
+	<header>
+
+		<div class="header_top">
+			<div class="wrapper">
+				<div class="inner_header">
+					<a href="index.html" class="logo"><img src="style/img/logo.png" alt="Логотип"></a>
+					<nav class="main_navigation">
+						<ul>
+							<li><a href="#">home</a></li>
+							<li><a href="#">about</a></li>
+							<li><a href="#">products</a></li>
+							<li><a href="#">blog</a></li>
+							<li><a href="#">shop</a></li>
+							<li><a href="#">galerry</a></li>
+							<li><a href="#">contacts</a></li>
+						</ul>
+					</nav>
+					<div class="header_cart">
+						<i class="fas fa-shopping-basket"></i>
+						<a href="#">Basket</a>
+						3 | $780
+					</div>
+				</div>
+				<!--inner_header-->
+			</div>
+		</div>
+		<!--header_top-->
+
+		<div class="header-slider"></div>
+
+	</header>
+	<!--header-->
+
+	<div class="container">
+		<div class="wrapper">
+
+		</div>
+	</div>
+	<!-- /.container -->
+	<footer>
+		<div class="wrapper"></div>
+	</footer>
+	<!--footer-->
 
 </body>
 
