--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Наша первая страница</title>
 	<link
-		href="https://fonts.googleapis.com/css?family=Fredoka+One|PT+Serif:400,400i|Quicksand:700|Raleway&display=swap"
+		href="https://fonts.googleapis.com/css?family=Fredoka+One|PT+Serif:400,400i|Quicksand:700| Raleway&display=swap"
 		rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="style/all.min.css">
@@ -28,7 +28,14 @@
 						<ul>
 							<li><a href="#">home</a></li>
 							<li><a href="#">about</a></li>
-							<li><a href="#">products</a></li>
+							<li><a href="#">products</a>
+								<ul class="sub-menu">
+									<li><a href="#">fruits</a></li>
+									<li><a href="#">vegetables</a></li>
+									<li><a href="#">berries</a></li>
+									<li><a href="#">other</a></li>
+								</ul>
+							</li>
 							<li><a href="#">blog</a></li>
 							<li><a href="#">shop</a></li>
 							<li><a href="#">galerry</a></li>
@@ -37,8 +44,8 @@
 					</nav>
 					<div class="header_cart">
 						<i class="fas fa-shopping-basket"></i>
-						<a href="#">Basket</a>
-						3 | $780
+						<a href="#" class="ptseriffont">Basket</a>
+						<span class="cart_counter">3</span>$780
 					</div>
 				</div>
 				<!--inner_header-->
