header-top-test-1

--- a/index.html
+++ b/index.html
@@ -10,64 +10,11 @@
 		rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="style/all.min.css">
-	<link rel="stylesheet" href="style/fontawesome.min.css">
 	<link rel="stylesheet" href="style/main.css">
 	<script src="script.js"></script>
 </head>
 
-<body class="homepage">
-
-	<!--Шапка сайта-->
-	<header>
-
-		<div class="header_top">
-			<div class="wrapper">
-				<div class="inner_header">
-					<a href="index.html" class="logo"><img src="style/img/logo.png" alt="Логотип"></a>
-					<nav class="main_navigation">
-						<ul>
-							<li><a href="#">home</a></li>
-							<li><a href="#">about</a></li>
-							<li><a href="#">products</a>
-								<ul class="sub-menu">
-									<li><a href="#">fruits</a></li>
-									<li><a href="#">vegetables</a></li>
-									<li><a href="#">berries</a></li>
-									<li><a href="#">other</a></li>
-								</ul>
-							</li>
-							<li><a href="#">blog</a></li>
-							<li><a href="#">shop</a></li>
-							<li><a href="#">galerry</a></li>
-							<li><a href="#">contacts</a></li>
-						</ul>
-					</nav>
-					<div class="header_cart">
-						<i class="fas fa-shopping-basket"></i>
-						<a href="#" class="ptseriffont">Basket</a>
-						<span class="cart_counter">3</span>$780
-					</div>
-				</div>
-				<!--inner_header-->
-			</div>
-		</div>
-		<!--header_top-->
-
-		<div class="header-slider"></div>
-
-	</header>
-	<!--header-->
-
-	<div class="container">
-		<div class="wrapper">
-
-		</div>
-	</div>
-	<!-- /.container -->
-	<footer>
-		<div class="wrapper"></div>
-	</footer>
-	<!--footer-->
+<body>
 
 </body>
 
